<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task">add_task</string>
    <string name="all_tasks">all_tasks</string>
    <string name="my_tasks">my_tasks</string>
    <string name="task_manager">task_manager</string>
    <string name="settings">settings</string>
    <string name="do_something">do_something</string>
    <string name="state">state</string>
    <string name="task_title">task_title</string>
    <string name="my_task">my_task</string>
    <string name="body">/body</string>
    <string name="tasks_count">tasks_count</string>
    <string name="save">SAVE</string>
    <string name="username">username</string>
    <string name="title">Title :</string>
    <string name="state1">State :</string>
    <string name="body1">Body :</string>
    <string name="state2">state2</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="team">Team</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
</resources>